# TensorComprehensions

./: .gitmodules  CMakeLists.txt  build.sh
.jenkins/: build.sh
benchmarks/: CMakeLists.txt  group_convolution.cc
docker/: README.md
docker/common/: install_pip_python.sh
docker/ubuntu-cuda-conda/: Dockerfile
include/tc/core/polyhedral/: schedule_tree_elem.h
tc/: CMakeLists.txt
tc/aot/: CMakeLists.txt  batch_normalization_generator.cc  common.cc  common.h  group_convolution_generator.cc  group_convolution_generator_from_json.cc  group_convolution_generator_from_json2.cc  group_normalization_generator.cc  mlp3_generator.cc  wavenet_generator.cc
tc/aten/: CMakeLists.txt  aten_compiler-inl.h
tc/autotuner/: CMakeLists.txt  autotuner-inl.h  genetic_autotuner.cc  genetic_tuning_harness.cc  options_cache-inl.h  options_cache.h
tc/c2/: tc_op.h
tc/core/: CMakeLists.txt  check.h  compiler-inl.h  compiler.cc  compiler.h  flags.cc  flags.h  gpu.h  mapping_options.cc  tc2halide.cc  tensor-inl.h  tensor.h
tc/core/cpu/: cpu_backend.h  cpu_mapping_options.cc  cpu_mapping_options.h  cpu_tc_executor.cc
tc/core/cuda/: cuda.h  cuda_backend.cc  cuda_backend.h  cuda_compilation_cache.cc  cuda_compilation_cache.h  cuda_compile.cc  cuda_mapping_options-inl.h  cuda_mapping_options.cc  cuda_mapping_options.h  cuda_tc_executor.cc
tc/core/opencl/: opencl_backend.cc  opencl_backend.h  opencl_mapping_options.cc  opencl_mapping_options.h  opencl_mapping_options_cpp_printer.cc
tc/core/polyhedral/cuda/: codegen.cc  mapped_scop.cc  mapped_scop.h
tc/core/polyhedral/opencl/: codegen.cc  codegen.h  mapped_scop.cc  mapped_scop.h  mapping_types.cc  mapping_types.h  memory_promotion_heuristic.cc  memory_promotion_heuristic.h  tighten_launch_bounds.cc  tighten_launch_bounds.h
tc/lang/: CMakeLists.txt
tc/proto/: CMakeLists.txt  aot.proto  compcache.proto
tc/utils/: CMakeLists.txt  benchmark_register.hpp  cache_merger.cc  common.cc  compile_cuda.sh  cuda_regenerator.cc  group_convolution_generator.cc  print_duplicate_groups.py  random_sample.cc  retriever.cc
test/: CMakeLists.txt  test_cuda_mapper.cc  test_cuda_mapper_memory_promotion.cc  test_other.cc
test/cuda/: test_autotuner.cc  test_autotuner_utility.cc  test_compilation_cache.cc
