find_package(Boost REQUIRED)
add_library(generator_common common.cc)
target_link_libraries(generator_common PUBLIC tc_core tc_core_cuda_no_sdk pcg)
target_include_directories(generator_common PUBLIC ${Boost_INCLUDE_DIRS})
set_property(TARGET generator_common PROPERTY CXX_STANDARD 17)

add_executable(gc_generator group_convolution_generator.cc)
target_link_libraries(gc_generator PUBLIC generator_common pcg stdc++fs)
set_property(TARGET gc_generator PROPERTY CXX_STANDARD 17)
set_property(TARGET gc_generator PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(gc_generator_json group_convolution_generator_from_json.cc)
target_link_libraries(gc_generator_json PUBLIC generator_common pcg stdc++fs json)
set_property(TARGET gc_generator_json PROPERTY CXX_STANDARD 17)
set_property(TARGET gc_generator_json PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
