add_executable(gc_generator group_convolution_generator.cc)
target_link_libraries(gc_generator PUBLIC tc_core pcg stdc++fs)
set_property(TARGET gc_generator PROPERTY CXX_STANDARD 17)
set_property(TARGET gc_generator PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(retriever retriever.cc)
target_link_libraries(retriever PUBLIC tc_core tc_proto stdc++fs ${GFLAGS_LIBRARIES})
set_property(TARGET retriever PROPERTY CXX_STANDARD 17)
set_property(TARGET retriever PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

find_package(CUDA REQUIRED)
cuda_add_executable(bencher bencher.cc)
target_link_libraries(bencher PUBLIC tc_core tc_proto stdc++fs ${GFLAGS_LIBRARIES} ${CUDA_LIBRARIES})
set_property(TARGET bencher PROPERTY CXX_STANDARD 17)
set_property(TARGET bencher PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
